[gd_scene load_steps=4 format=3 uid="uid://cy4f0n20yjext"]

[ext_resource type="Script" uid="uid://dig13focdj07l" path="res://Maps/Menus/SteamMenus/SteamJoinMenu.gd" id="1_o1bs0"]
[ext_resource type="AudioStream" uid="uid://bc4cmw0iheacm" path="res://Assets/Audio/Misc/GuitarNotes/low_e_palm_mute.mp3" id="2_3yh4g"]
[ext_resource type="AudioStream" uid="uid://bunogafs7h0eb" path="res://Assets/Audio/Misc/GuitarNotes/a_sharp_harmonic.mp3" id="3_h5a7p"]

[node name="SteamJoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1bs0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Steam Join Lobby Menu"

[node name="RefreshButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Lobby Name"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Players"

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Ping"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="LobbiesList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/ScrollContainer/LobbiesList"]
visible = false
layout_mode = 2
text = "Example Entry"

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Back"

[node name="StatusPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -188.0
offset_top = 60.0
offset_right = 188.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="StatusLabel" type="RichTextLabel" parent="StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Audio" type="Node" parent="."]

[node name="ButtonHoverAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_3yh4g")
volume_db = -12.0
bus = &"UI"

[node name="ButtonPressedAudio" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("3_h5a7p")
volume_db = -12.0

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/RefreshButton" to="." method="_on_any_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer3/BackButton" to="." method="_on_any_button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer3/BackButton" to="." method="_on_back_button_pressed"]
